Fully working version

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/overlort/poker-helper-fe#readme",
   "description": "",
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.11",
     "@vitejs/plugin-react": "^4.7.0",
     "axios": "^1.11.0",
     "mobx": "^6.13.7",
